2005-07-14 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Removed cryptography for now--needs to be redone.

2005-07-08 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* Use log() instead of print in client, server, and transports
	* sumiget logs to "Client" tab, now works
	* Removed "Networks" tab
	* Fixed most pychecker warnings on source code
	* Split larger functions into smaller functions
	* Added 'noise' option to allow simulated packet loss
	* sumigetw now runs sumiserv in "Server" tab

2005-07-02 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.10
	* sumiserv send_packet_UDP_PCAP tested and now works on Windows Me
	* WinPcap DLLs removed from distribution--install separately instead
	  (fixes missing DLL problem on Me)
	* added server_udp_PCAP to receive UDP packets using WinPcap in
	  sumiget, added dchanmode to config.py
	* Fixed problem with ICMP unreachable ports (generated by OS) when
	  using pcap mode.

2005-06-20 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.9
	* source release only

2005-06-19 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* fixed UDP checksum; now works on BSD, Windows, raw & data-link

2005-06-18 Jeff Connelly <jeffconnelly@users.sourceforge.net>
	* sumiserv uses transports (irclib and aim currently functional)
	  now instead of relying on IRC
	* all IRC-specific code in sumiserv moved to irclib transport
	* aim transport can receive messages, thanks to pcapy
	* a modified pcapy can send raw link-layer frames using WinPcap
	* send_packet_UDP_WINPCAP is an alternate way to send UDP packets;
	  it can also spoof the Ethernet addresses--this method may allow
	  sumiserv to serve via UDP on Windows 95/98/Me (not tested)
	* send_frame_ETHER added
	* UDP checksums finally added; should reduce possibily of corruption

2004-09-09 Jeff Connelly <jeffconnelly@users.sourceforge.net> - 0.8.8
	* "string".encode("hex") replaced with format strings instead--
	  sumiserv should now run compiled on Win32